Modernise java code with contemporary patterns and string formatting
- Replace string concatenation with String.formatted() for better readability
- Convert if-else chains to switch expressions for cleaner type handling
- Use pattern matching in switch statements
- Replace .get(0) with .getFirst() for list access
- Replace .collect(Collectors.toList()) with .toList()
- Add assertion checks for null safety on ItagItem and Format objects
- Simplify Optional handling with orElseGet() patterns
- Remove unecessary null checks where is Empty() suffices